<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/background1"
        android:theme="@style/AppTheme.EditText"
        app:boxBackgroundColor="@color/appbarColor"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:startIconDrawable="@drawable/email_icon_outline_24"
        app:startIconTint="@color/background1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/background1"
        android:theme="@style/AppTheme.EditText"
        app:boxBackgroundColor="@color/appbarColor"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/userNameLayout"
        app:passwordToggleDrawable="@drawable/password_drawable"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/background1"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/background1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logIn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="signIn"
        android:text="Log in"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/background1"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:strokeColor="@color/background1" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/logIn"
        app:layout_constraintStart_toStartOf="@id/logIn"
        app:layout_constraintTop_toBottomOf="@id/logIn" />

    <TextView
        android:id="@+id/resendVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resend_verification"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/forgetPassword"
        app:layout_constraintStart_toStartOf="@id/forgetPassword"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintVertical_bias="0.0"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:strokeColor="@android:color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />
</androidx.constraintlayout.widget.ConstraintLayout>