<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:textColorHint="@color/background"
        app:hintTextColor="@android:color/white"
        app:boxBackgroundColor="@color/background1"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:theme="@style/AppTheme.EditText"
        android:hint="@string/hint_username">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/userName"
    android:layout_width="match_parent"
    android:inputType="text"
    android:maxLines="1"
    android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/userNameLayout"
        app:passwordToggleDrawable="@drawable/password_drawable"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/background"
        app:boxBackgroundColor="@color/background1"
        android:textColorHint="@color/background"
        app:hintTextColor="@android:color/white"
        android:theme="@style/AppTheme.EditText"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:hint="@string/hint_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:onClick="signUp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/background1"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Sign In"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/background1"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Forget Password?"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/background1"
        app:layout_constraintTop_toBottomOf="@id/SignUp"
        app:layout_constraintEnd_toEndOf="@id/SignIn"
        app:layout_constraintStart_toStartOf="@id/SignUp"/>
    <TextView
        android:id="@+id/resendVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Resend Verification"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/background1"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        app:layout_constraintEnd_toEndOf="@id/forgetPassword"
        app:layout_constraintStart_toStartOf="@id/forgetPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>